# sorter

./: CMakeLists.txt  README.md
src/: sorter.c  sorter.h  sorter.py
